fixed spelling mistake

--- a/information.html
+++ b/information.html
@@ -6,8 +6,8 @@
 Information page:
 <br><BR>
 <ul>
-<li>This page is veryyy important</li>
-<li>There's no wdy it could have been created at the same time as the index page, whatever that is.</li>
+<li>This page is very very important</li>
+<li>There's no way it could have been created at the same time as the index page, whatever that is.</li>
 </ul>
 
 </body>
