Emphasized importance of page.  [issue #WRIGFIVGUM-48 assign:ryan state:resolved]

--- a/information.html
+++ b/information.html
@@ -6,7 +6,7 @@
 Information page:
 <br><BR>
 <ul>
-<li>This page is very very important. For real.</li>
+<li>This page is very very important</li>
 <li>There's no way it could have been created at the same time as the index page, whatever that is.</li>
 </ul>
 
