Added a period [issue #48 assign:rcarroll state:done]

--- a/information.html
+++ b/information.html
@@ -8,7 +8,7 @@ Information page!
 <ul>
 <li>This page is very very important. For real.</li>
 <li>There's no way it could have been created at the same time as the index page, whatever that is.</li>
-<li>Now I added a line at the end </li>
+<li>Now I added a line at the end.</li>
 </ul>
 
 </body>
