Added index page [issue #48 assign:awogksch state:reopen]

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
 This is the home page that was just added.
 <br><BR>
+Feature 3 additions
+<br><Br>
 <a href="/first.html">Here is the first page</a>
 
 </body>
