--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ This is the home page that was just added.
 Feature 3 additions
 <br><Br>
 <a href="/first.html">Here is the first page</a>
-
+<br><br>
+Test!
 </body>
 </html>
